--- a/submission/main.latex
+++ b/submission/main.latex
@@ -19,6 +19,8 @@
 \begin{document}
 \maketitle
 
+All files mentioned are available at \href{https://github.com/voltracker/software-testing-2022}{GitHub}
+
 \section{Outline of the Software Being Tested}
 The software I will be testing is from my Informatics Large Practical project. This software (called PizzaDronz) is an online pizza ordering system that uses drones to deliver pizza to students who are in Appleton Tower. The path the drone takes must avoid designated no fly zones which are usually open areas in which students tend to gather.
 The purpose of these no fly zones is to prevent collisions (with people) if the drone's hardware fails or the pizza boxes weren't correctly attached to the drone.
